--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ absl-py==0.8.1
 astor==0.8.0
 attrs==19.2.0
 backcall==0.1.0
+bert-tensorflow==1.0.1
 bleach==3.1.4
 boto==2.49.0
 boto3==1.9.248
@@ -9,6 +10,7 @@ botocore==1.12.248
 certifi==2019.9.11
 chardet==3.0.4
 collections-extended==1.0.2
+colorama==0.4.3
 cycler==0.10.0
 decorator==4.4.0
 defusedxml==0.6.0
@@ -63,6 +65,8 @@ pyparsing==2.4.2
 pyrsistent==0.15.4
 python-dateutil==2.8.0
 pytz==2019.3
+pywin32==227
+pywinpty==0.5.7
 PyYAML==5.1.2
 pyzmq==18.1.0
 qtconsole==4.5.5
@@ -74,13 +78,16 @@ Send2Trash==1.5.0
 six==1.12.0
 sklearn==0.0
 smart-open==1.8.4
-tensorboard==2.0.0
-tensorflow==2.0.1
-tensorflow-estimator==2.0.0
+tensorboard==1.15.0
+tensorflow==1.15.0
+tensorflow-estimator==1.15.1
+tensorflow-gpu==1.15.0
+tensorflow-hub==0.8.0
 termcolor==1.1.0
 terminado==0.8.2
 testpath==0.4.2
 tornado==6.0.3
+tqdm==4.46.0
 traitlets==4.3.3
 urllib3==1.25.6
 wcwidth==0.1.7
